fix(deps): add missing optional SchallCircuitGroup dependency

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: ????
+  Bugfixes:
+    - Add missing optional dependency on SchallCircuitGroup.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-09-17
   Changes:
