--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
-Date: ????
+Date: 2025-09-17
   Bugfixes:
     - Add missing optional dependency on SchallCircuitGroup.
 ---------------------------------------------------------------------------------------------------
